First version of thesis ready

--- a/Tesis/anexoA.tex
+++ b/Tesis/anexoA.tex
@@ -1,4 +1,6 @@
-\chapter*{Anexo A: Formulario basado en MEEGA+} \label{AnexoA}
+\chapter*{Anexo A: Formulario basado en MEEGA+} 
+
+\label{AnexoA}
 
 \newgeometry{margin=0.5in}
 
@@ -13,40 +15,44 @@ Q1       & El diseño de juego es atractivo \\
 Q2       & La fuente de texto y los colores están bien combinados y son consistentes \\
 Q3       & Tuve que aprender cosas antes de poder jugar \\
 Q4       & Aprender a jugar se me hizo fácil \\
-Q5       & Creo que la mayoría de la gente aprendería a usar este juego rápidamente. \\
+Q5*      & Creo que la mayoría de la gente aprendería a usar este juego rápidamente. \\
 Q6       & Creo que el juego es fácil de jugar. \\
 Q7       & Las reglas del juego son claras y fáciles de entender \\
 Q8       & Las fuentes (su tamaño y estilo) usadas son fáciles de leer \\
 Q9       & Los colores usados en el juego son significativos \\
-Q10      & La estructura me ayudó a tener confianza en que aprendería con este juego \\
-Q11      & Este juego es desafiante en la medida justa \\
-Q12      & El juego ofrece nuevos desafíos a un ritmo adecuado \\
+Q10*     & El juego permite customizar la apariencia (fuentes y color) según mis preferencias \\
+Q11*     & El juego previene que cometa errores \\
+Q12*     & Cuando cometo un error, es fácil recuperarse de él \\
 Q13      & Cuando vi el juego por primera vez, tuve la sensación de que sería fácil para mí \\
-Q14      & Completar las tareas del juego me provocó satisfacción \\
-Q15      & Siento satisfacción con lo aprendido en este juego \\
-Q16      & Siento satisfacción con lo aprendido en este juego \\
-Q17      & Recomendaría este juego a mis colegas \\
-Q18*     & Pude interactuar con otros jugadores mientras jugaba. \\
-Q19*     & El juego promueve la cooperación o competencia entre jugadores. \\
-Q20*     & Me sentí bien interactuando con otros jugadores durante el juego. \\
-Q21     & Me entretuve con el juego \\
-Q22      & Algún elemento del juego me hizo sonreír \\
-Q23      & Había algo interesante al inicio del juego que llamó mi atención \\
-Q24      & Estaba tan envuelta/o en la tarea propuesta por el juego que perdí la noción del tiempo \\
-Q25      & Me olvidé de mi entorno físico mientras jugaba \\
-Q26      & Los contenidos del juego son relevantes para mis intereses \\
-Q27      & Es claro ver que los contenidos del juego se relacionan a cierta materia de la carrera \\
-Q28      & Este juego es adecuado para enseñar el contenido \\
-Q29      & Prefiero aprender con este juego en vez de aprender con otros métodos de enseñanza \\
-Q30      & El juego contribuyó a mi aprendizaje \\
-Q31      & El juego me permitió aprender de forma eficiente en comparación con otras actividades \\
+Q14      & La estructura me ayudó a tener confianza en que aprendería con este juego \\
+Q15      & Este juego es desafiante en la medida justa \\
+Q16      & El juego ofrece nuevos desafíos a un ritmo adecuado \\
+Q17      & El juego no se vuelve monótono a medida que se progresa \\
+Q18      & Completar las tareas del juego me provocó satisfacción \\
+Q19      & Gracias a mi esfuerzo personal pude avanzar en el juego \\
+Q20      & Siento satisfacción con lo aprendido en este juego \\
+Q21      & Recomendaría este juego a mis colegas \\
+Q22*     & Pude interactuar con otros jugadores mientras jugaba. \\
+Q23*     & El juego promueve la cooperación o competencia entre jugadores. \\
+Q24*     & Me sentí bien interactuando con otros jugadores durante el juego. \\
+Q25      & Me entretuve con el juego \\
+Q26      & Algún elemento del juego me hizo sonreír \\
+Q27      & Había algo interesante al inicio del juego que llamó mi atención \\
+Q28      & Estaba tan envuelt@ en la tarea propuesta por el juego que perdí la noción del tiempo \\
+Q29      & Me olvidé de mi entorno físico mientras jugaba \\
+Q30      & Los contenidos del juego son relevantes para mis intereses \\
+Q31      & Es claro ver que los contenidos del juego se relacionan a cierta materia de la carrera \\
+Q32      & Este juego es adecuado para enseñar el contenido \\
+Q33      & Prefiero aprender con este juego en vez de aprender con otros métodos de enseñanza \\
+Q34      & El juego contribuyó a mi aprendizaje \\
+Q35      & El juego me permitió aprender de forma eficiente en comparación con otras actividades \\
 & \\
 
 \hline
 \end{tabular}
 \vspace{0.5em} % Adjust the vertical space
 \par
-Preguntas con * es porque no estaban en el formulario. Se omitieron y se rellenaron con 0 porque el juego no incluía interacción con otros jugadores.
+Preguntas con * es porque no estaban en el formulario. Se omitieron y se rellenaron con 0 porque el juego no incluía interacción con otros jugadores ni permitía customización.
 
 \end{table}
 
