--- a/Tesis/anexoC.tex
+++ b/Tesis/anexoC.tex
@@ -1,8 +1,19 @@
-\chapter*{Anexo C: Respuestas de pruebas de usuario}\label{AnexoC}
+\chapter*{Anexo C: Aprobación de Comité de Ética}\label{AnexoC}
+% Poner aquí el PDF del comité de ética
 
-\subsection*{Prueba de usabilidad en conjunto con prueba académica}
-Q1;Q2;Q3;Q4;Q5;Q6;Q7;Q8;Q9;Q10;Q11;Q12;Q13;Q14;Q15;Q16;Q17;Q18;Q19;Q20;Q21;Q22;Q23;Q24;Q25;Q26;Q27;Q28;Q29;Q30;Q31
+Revisar siguiente página. Esta aprobación se dio como respuesta a una solicitud para realizar un trabajo de título con personas, para asegurarse que se enmarcara dentro del marco ético establecido por la facultad.
 
+\newgeometry{margin=0.0in} % Eliminamos bordes temporalmente
 
+% Páginas 1 y 2 en dstintas páginas
+\begin{figure}[h]
+   \centering
+   \fbox{\includegraphics[page=1, width=0.9\textwidth]{imagenes/ComiteEticaFirmado.pdf}}
+\end{figure}
 
-\subsection*{Prueba de usabilidad en formato libre para cualquier usuario}
+\begin{figure}[h]
+   \centering
+   \fbox{\includegraphics[page=2, width=0.9\textwidth]{imagenes/ComiteEticaFirmado.pdf}}
+\end{figure}
+
+\restoregeometry
