--- a/Tesis/bibliografia.bib
+++ b/Tesis/bibliografia.bib
@@ -429,3 +429,43 @@ DOI = {10.3390/educsci9040276}
   urldate = {2023-11-15}
 }
 
+@article{maldonado2021statistical,
+  title={Statistical Methods for the Analysis of Polytomous Response Data},
+  author={Maldonado, Francisca Loreto Calder{\'o}n},
+  year={2021}
+}
+
+@article{Zea2014ModelingST,
+  title={Modeling storytelling to be used in educational video games},
+  author={Natalia Padilla Zea and Francisco Luis Guti{\'e}rrez Vela and Jos{\'e} Rafael L{\'o}pez-Arcos and Ana Abad-Arranz and Patricia Paderewski},
+  journal={Computers in Human Behavior},
+  year={2014},
+  volume={31},
+  pages={461-474},
+  url={https://api.semanticscholar.org/CorpusID:29260829}
+}
+
+@article{FrangoSilveira2019BuildingEN,
+  title={Building Effective Narratives for Educational Games},
+  author={Ismar Frango Silveira},
+  journal={2019 XIV Latin American Conference on Learning Technologies (LACLO)},
+  year={2019},
+  pages={299-305},
+  url={https://api.semanticscholar.org/CorpusID:211210389}
+}
+
+# PlayFabTelemetry
+@misc{PlayFabTelemetry,
+title = {PlayFab PlayStream: Real-time event processing and monitoring for games},
+author = {Microsoft},
+howpublished = {\url{https://phys.org/news/2023-07-korean-team-room-temperature-ambient-pressure-superconductor.html}},
+note = {Accessed: 2023-11-18}
+}
+
+@inproceedings{Zain2011EyeTI,
+  title={Eye Tracking in Educational Games Environment: Evaluating User Interface Design through Eye Tracking Patterns},
+  author={Nurul Hidayah Mat Zain and Fariza Hanis Abdul Razak and Azizah Jaafar and Mohd Firdaus Zulkipli},
+  booktitle={International Visual Informatics Conference},
+  year={2011},
+  url={https://api.semanticscholar.org/CorpusID:27405579}
+}
