--- a/Tesis/conclu.tex
+++ b/Tesis/conclu.tex
@@ -1,10 +1,19 @@
 \chapter{Conclusión}
 
-El videojuego cumple el propósito de enseñar el algoritmo de BFS y DFS en base a los resultados. Estudiantes que están iniciando en la carrera de computación en la Universidad de Chile fueron capaces de responder correctamente una prueba y entender la diferencia entre los algoritmos y de BFS y DFS, así cómo entender qué es un grafo.
+El videojuego logra su objetivo de enseñar los algoritmos de BFS y DFS, como evidencian los resultados obtenidos por estudiantes de informática de la Universidad de Chile. Estos estudiantes demostraron comprender los algoritmos, así como la naturaleza de los grafos, al responder de manera acertada a una prueba asociada al juego.
 
-Por otra parte, el juego posee una aprobación positiva y es considerado, según el modelo MEEGA+ \cite{meegaplus}, un juego de calidad % TODO: Comprobar.
-Se identificaron un conjunto de mejoras para realizar al proceso que están mencionadas en el capítulo de discusiones de este trabajo. Sin embargo, no queda esclarecido qué debilidades específicas puede puede tener esta metodología, puede que existan conceptos que no son capturados por parte de los estudiantes en este videojuego, o conceptos que son capturados erróneamente.
+%%% TODO: VERIFICAR %%%
+Además, el juego ha recibido una evaluación positiva y se considera, según el modelo MEEGA+ \cite{meegaplus}, como un juego de calidad. A pesar de las mejoras identificadas durante el proceso, el juego ha sido bien recibido por los estudiantes, y su percepción positiva puede influir beneficiosamente en la motivación y, por ende, en los resultados académicos. Aunque se reconocen las áreas de mejora, este trabajo sienta las bases para futuras investigaciones, especialmente en relación con el diseño de videojuegos educativos y su impacto en la educación en informática. La metodología utilizada aquí podría ser profundizada y perfeccionada en trabajos futuros para evaluar de manera más precisa la efectividad y comprensión de los conceptos enseñados mediante este enfoque lúdico.
 
-Se considera positivo que el videojuego sea percibido de buena manera por parte del estudiantado, puesto que esto afecta positivamente la motivación, lo cual a su vez mejora los resultados académicos, incluso si el videojuego no es un medio eficiente de aprendizaje, al menos puede constituir un complemento en la educación de la computación.
 
-Se recomienda investigar más sobre este tipo de trabajos aplicando las sugerencias señaladas. Se necesita investigar más para entender de qué manera afecta el diseño de un videojuego, la narrativa, los efectos visuales y auditivos, la percepción subjetiva y el rendimiento académico en los estudiantes que aprendan con este videojuego.
+% Énfasis en Resultados Positivos: Resalta de manera más específica los resultados positivos obtenidos, como el hecho de que los estudiantes lograron comprender los algoritmos y la estructura de los grafos, así como aprobar la prueba asociada. Esto ayuda a consolidar la efectividad del videojuego como herramienta educativa.
+
+% Impacto en la Motivación: Puedes profundizar en cómo la percepción positiva del juego podría influir en la motivación de los estudiantes. ¿Se notó un aumento en el interés por el tema? ¿Hubo comentarios que sugieran un cambio en la actitud hacia el aprendizaje?
+
+% Relación con Otros Métodos de Enseñanza: Considera mencionar cómo este enfoque se integra o complementa con otros métodos de enseñanza tradicionales. ¿El juego podría servir como apoyo en determinadas etapas del aprendizaje?
+
+% Desafíos y Lecciones Aprendidas: Brevemente, comparte los desafíos encontrados durante el desarrollo e implementación del videojuego, así como las lecciones aprendidas. Esto podría incluir aspectos técnicos, metodológicos o de diseño que podrían ser útiles para otros investigadores o desarrolladores en proyectos similares.
+
+% Relevancia en la Educación Actual: Haz hincapié en la relevancia del juego en el contexto educativo actual. ¿Cómo se alinea con las tendencias y necesidades de la educación en informática?
+
+% Posibles Extensiones del Trabajo: Además de lo que ya has mencionado sobre futuras investigaciones, podrías sugerir posibles extensiones o mejoras específicas para el juego en función de los comentarios y resultados obtenidos.
