--- a/Tesis/discusion.tex
+++ b/Tesis/discusion.tex
@@ -15,36 +15,46 @@
 
 \section{Fortalezas de la metodología aplicada}
 
-La principal fortaleza de la metodología aplicada es que se basa en un formulario estandarizado y ya probado. Existe una confianza alta en que el formulario mide lo que efectivamente busca medir, lo cual se validó a través de la delta de Cronbach \cite{meegaplus}. Esta metodología permite asignar un valor numérico a la calidad del juego según las opiniones de los usuarios. Este valor numérico se considera rasgo latente (latent trait) y se suele designar con el signo $\theta$ en IRT \cite{RashMeasurementTheoryAndrichMarais}.
+La principal fortaleza de la metodología empleada radica en la utilización de un formulario estandarizado y previamente validado. Se tiene una alta confianza en que dicho formulario mide de manera efectiva lo que busca evaluar, como se validó a través de la alfa $\alpha$ de Cronbach, medida en el trabajo de Petri et al. \cite{MeegaPlusManual}. Esta medida indica que las preguntas evalúan efectivamente lo que el cuestionario buscan evaluar \cite{MeegaPlusManual}. Esta metodología proporciona una valoración numérica de la calidad del juego según las opiniones de los usuarios, representando este valor numérico como un rasgo latente (latent trait) comúnmente denotado como $\theta$ en IRT \cite{maldonado2021statistical, RashMeasurementTheoryAndrichMarais}.
 
-El proceso de diseño también se considera robusto, pues incorporó retroalimentación por parte de expertos y la utilización de la metodología de Loud Thinking en cada iteración, lo que permitió que los jugadores pudieran desenvolverse correctamente en el juego y finalmente responder la prueba escrita. Se comprobó empíricamente cómo mejoró la usabilidad en cada paso.
+El proceso de diseño se considera robusto, ya que incorporó retroalimentación de expertos y la aplicación de la metodología de "Loud Thinking" en cada iteración. Esto permitió que los jugadores se familiarizaran adecuadamente con el juego, culminando en la exitosa realización de la prueba escrita. Se ha comprobado empíricamente cómo la usabilidad mejoró en cada fase del desarrollo.
 
-El proceso además está fuertemente documentado, pues la historia de desarrollo está disponible en un repositorio de Github \cite{GithubRepo}, de manera que cada iteración del juego es reproducible, e incluso los experimentos con usuarios son reproducibles, permitiendo a otro investigador volver a una versión anterior del videojuego y probarla con usuarios distintos en cada ocasión.
+Además, el proceso está rigurosamente documentado, ya que la historia completa del desarrollo se encuentra disponible en un repositorio de Github \cite{GithubRepo}. Esto posibilita que cada iteración del juego sea reproducible, incluso los experimentos con usuarios, lo que permite a otros investigadores volver a versiones anteriores del videojuego y realizar pruebas con diferentes grupos de usuarios en cada instancia.
 
+Además, el proceso está rigurosamente documentado, ya que la historia completa del desarrollo se encuentra disponible en un repositorio de Github \cite{GithubRepo}. Esto posibilita que cada iteración del juego sea reproducible, incluso los experimentos con usuarios, lo que permite a otros investigadores volver a versiones anteriores del videojuego y realizar pruebas con diferentes grupos de usuarios en cada instancia.
 
 
 \section{Debilidades y mejoras para la metodología aplicada}
 
-Una debilidad identificada es que la prueba académica falló en detectar diferencias entre los grupos, al asignarle un puntaje perfecto a todos los estudiantes. Se proponen dos metodologías para mejorar la precisión de los resultados: 1.- Aplicar A/B testing, comparando la metodología del videojuego educativo con otra aplicación, o la lectura de un artículo relacionado a la misma materia que busca enseñar el videojuego. Luego, probar a los estudiantes con algún examen escrito que contenga más preguntas, de manera que se pueda establecer una graduación y hacer una comparación directa entre distintos métodos de educación. 2.- El caso ideal sería tomar una muestra aleatoria de estudiantes que estén cursando Algoritmos y Estructuras de Datos y mostrarles el videojuego. Posterior a un examen, medir las diferencias entre el grupo que probó el videojuego y el grupo que no lo hizo. Sin embargo, para esto se requiere apoyo institucional y asegurarse de que se vea la materia de grafos en el curso. 
+Una debilidad identificada es que la prueba académica no logró detectar diferencias entre los grupos, asignando un puntaje perfecto a todos los estudiantes. Se proponen dos metodologías para mejorar la precisión de los resultados:
 
-El trabajo hecho no mide una componente social asociada al videojuego. Esta se descartó por dificultades en la aplicación de las pruebas de usuario y porque era difícil implementar a nivel de diseño una componente social en el videojuego que esté justificada desde el punto de vista del usuario. El modelo MEEGA+ \cite{meegaplus} busca evaluar también una componente social.
+1) Aplicar A/B testing, comparando la metodología del videojuego educativo con otra aplicación o la lectura de un artículo relacionado con la misma materia que busca enseñar el videojuego. Luego, evaluar a los estudiantes con un examen escrito más extenso para establecer una graduación y realizar una comparación directa entre distintos métodos de educación.
 
-No se puede asegurar la heterogeneidad de la muestra. De partida, existe el sesgo del voluntario. El sesgo del voluntario afecta de acuerdo a \cite{volunterBias}. El caso ideal consiste en hacer una separación aleatoria en los cursos como parte de las actividades de la clase. Sin embargo, es probable que aún así existan sesgos en los cursos por la simple selección de estudiantes de carreras asociadas a computación o informática. % CITAR TODO
+2) Idealmente, tomar una muestra aleatoria de estudiantes que estén cursando Algoritmos y Estructuras de Datos y mostrarles el videojuego. Posteriormente, realizar un examen y medir las diferencias entre el grupo que probó el videojuego y el grupo que no lo hizo. Sin embargo, esto requiere apoyo institucional y garantizar la inclusión de la materia de grafos en el curso.
+
+
+Una mejora observable es que el juego propuesto no aborda una componente social asociada al videojuego. Esta se descartó debido a dificultades en la aplicación de las pruebas de usuario y porque era complicado implementar, a nivel de diseño, una componente social justificada desde la perspectiva del usuario. El modelo MEEGA+ \cite{meegaplus} busca evaluar también esta componente social. Para objeto de la evaluación de la calidad de juego, las preguntas relacionadas con este item se omitieron en el formulario.
+
+No se puede garantizar la heterogeneidad de la muestra. Existe el sesgo del voluntario, que afecta según \cite{volunterBias}. El caso ideal implica una separación aleatoria en los cursos como parte de las actividades de la clase. No obstante, es probable que aún existan sesgos en los cursos debido a la selección de estudiantes de carreras asociadas a computación o informática. Se recomienda acotar el grupo solo a estudiantes de carreras asociadas a la informática. Por esta misma razón, también se aconseja acotar estos estudios únicamente a estudiantes de carreras relacionadas con STEM y agregar segmentación.
+
 %  Por otra parte, existe el sesgo de novedad. % CITAR
+Además, según libros como \cite{Rogers2002InteractionDB}, es más efectivo realizar una prueba dos semanas después para medir aprendizajes efectivos. No obstante, esto fue difícil de realizar dadas las condiciones del trabajo, ya que conseguir voluntarios en un contexto donde los estudiantes prefieren dedicar su tiempo a preparar exámenes en lugar de participar en una actividad universitaria fue un desafío. Se sugiere buscar apoyo institucional y aumentar los incentivos a la participación, por ejemplo, mediante actividades que fomenten la comunidad al inicio del semestre académico.
 
-Además, autores como mencionan que es mejor hacer una prueba dos semanas después para medir aprendizajes. Sin embargo, esto era difícil de realizar dadas las condiciones del trabajo, puesto que fue difícil conseguir voluntarios en un contexto donde los estudiantes prefieren dedicar su tiempo a preparar exámenes en vez de participar en una actividad universitaria \cite{Rogers2002InteractionDB}.
+Por otro lado, el autor de este trabajo no es un diseñador de videojuegos y su principal énfasis está en la programación. Se destaca el rol y la importancia del diseño en los videojuegos, que deben ser atractivos y ofrecer mecánicas que recompensen al jugador, así como agregarle una dimensión social a través de un ranking, componentes cooperativas o competitivas. La narrativa tampoco está completamente desarrollada; no presenta una historia con un fin, desarrollo de personaje ni antagonista. Estos elementos suelen despertar más el interés del jugador \cite{Zea2014ModelingST, FrangoSilveira2019BuildingEN}.
 
-Por otra parte, el autor de este trabajo no es un diseñador de videojuegos y su principal énfasis está en la programación. Se destaca el rol y la importancia del diseño del videojuego. Este tiene que ser llamativo y ofrecer mecánicas que recompensen al jugador, así como agregarle una dimensión social a través de un ranking, componentes cooperativas o competitivas. La narrativa tampoco es acabada, no es una historia que lleve un fin y no se presenta un desarrollo de personaje, tampoco se presenta un antagonista. Este tipo de elementos despiertan más el interés del jugador.
 
 \section{Trabajo futuro}
 
 % Poner aquí ideas locas que había comenzado a anotar con Jeremy 
+% Quizás debería poner eye tracking en el marco teórico?
+% Quizás también poner elementos de los videojuegos en el marco teórico, como sonidos, interfaces, controles, tiempos, mecánicas.
 
-En un futuro, esta misma aplicación o derivaciones de esta podrían probarse en otros contextos, con muestras más grandes, para asegurar de mejor manera la validez estadística. Por otra parte, se recomienda utilizar un diseño experimental que deje de lado sesgos como el factor de novedad y el sesgo del voluntario. Además, se recomienda medir en distintos intervalos temporales los resultados del aprendizaje al utilizar esta aplicación. Por último, esta aplicación fue creada con la intención de ser un complemento a la enseñanza tradicional y usarse en pausas activas, por lo que también se sugiere estudiarla en grupos donde se utilizó esta herramienta como complemento y compararla con otro grupo que no la haya utilizado.
 
-Una mejora en la recolección de datos es aplicar principios de telemetría y uso de otras tecnologías que permitan profundizar el estudio de usabilidad y experiencia de usuario. Ejemplos de estas tecnologías son eye-tracking o biofeedback. Esto permitiría entender mejor y de una forma más estandarizada cómo experimentan los usuarios el videojuego y dónde hay espacio de mejora. Por ejemplo, se espera que los usuarios vean el cód igo cada vez que realizan un paso, lo que podría verificarse utilizando eye-tracking. 
+En el futuro, esta aplicación o sus derivaciones podrían evaluarse en otros contextos, con muestras más extensas, para garantizar una validez estadística más sólida. Se recomienda la implementación de un diseño experimental que mitigue sesgos como el factor de novedad y el sesgo del voluntario. Además, se sugiere medir los resultados del aprendizaje en distintos intervalos temporales al utilizar esta aplicación. Considerando que la aplicación fue concebida como un complemento a la enseñanza tradicional y para ser utilizada en pausas activas, se propone estudiarla en grupos donde se haya empleado como herramienta complementaria y comparar los resultados con otro grupo que no la haya utilizado.
 
-Una posible expansión a este trabajo es usar otras estructuras de datos y otros algoritmos que no necesariamente tengan relación con los grafos. El software creado está hecho para ser extendible a otros algoritmos. Eso sí, esto requeriría trabajo de diseño, para determinar cómo serán las visualizaciones y representaciones de los algoritmos, así como las mecánicas.
+Una mejora en la recolección de datos sería la aplicación de principios de telemetría y el uso de tecnologías adicionales que profundicen en el estudio de usabilidad y experiencia del usuario. Hay frameworks que sirven como servidor para aplicaciones relacionadas con videojuegos y ofrecen servicios de telemetría y análisis de datos, como PlayFab \cite{PlayFabTelemetry}. Tecnologías como eye-tracking o biofeedback podrían proporcionar una comprensión más detallada y estandarizada de la experiencia de los usuarios con el videojuego, identificando áreas de mejora \cite{Zain2011EyeTI}. Por ejemplo, se espera que los usuarios visualicen el código cada vez que realizan un paso, y esto podría confirmarse mediante eye-tracking. En el trabajo de \cite{Zain2011EyeTI}, se observa cómo los usuarios interactúan con las interfaces en un videojuego educativo.
 
-A nivel de diseño de juego, podrían agregarse más elementos de gamificación, como adquisión de nuevos elementos, desbloqueo de mecánicas, acumulación de puntos, establecimiento de un ranking global, sistema de logros y finales alternativos.
+Una posible expansión de este trabajo implica la exploración de otras estructuras de datos y algoritmos que no necesariamente estén vinculados a los grafos. El software desarrollado está diseñado para ser adaptable a otros algoritmos, aunque requeriría trabajo adicional para determinar visualizaciones, representaciones y mecánicas específicas para cada uno.
+
+Desde la perspectiva del diseño de juegos, se podrían agregar más elementos de gamificación, como la adquisición de nuevos elementos, desbloqueo de mecánicas, acumulación de puntos, establecimiento de un ranking global, sistema de logros y finales alternativos.
 % TODO BUSCAR CITA
