--- a/Tesis/intro.tex
+++ b/Tesis/intro.tex
@@ -48,7 +48,7 @@ El objetivo principal de este trabajo es medir el aprendizaje y la motivación d
 
 \item Concebir una aplicación interactiva que visualice grafos y permita seguir los pasos relacionados con algoritmos que operan en dichos grafos.
 
-\item Implementar una evaluación estandarizada para medir la percepción de los estudiantes respecto al videojuego creado.
+\item Llevar a cabo una evaluación estandarizada para medir la percepción de los estudiantes respecto al videojuego creado.
 
 \item Idear, desarrollar e implementar mecánicas de juego y una arquitectura de programación transferibles a otros videojuegos que instruyan en materias relacionadas con la programación.
 
