--- a/Tesis/metodologia.tex
+++ b/Tesis/metodologia.tex
@@ -10,36 +10,27 @@ El trabajo se dividió en tres fases, las cuales constaron de distintas pregunta
 
 \subsection{Fase exploratoria}
 
-En esta primera fase se buscaba acumular retroalimentación y opiniones de usuarios de la forma más libre posible, utilizando metodologías de loud thinking con usuarios experimentados en grafos. Las razones por las cuales se usó esta metodología son las siguientes.
+En esta primera fase, el objetivo era recopilar retroalimentación y opiniones de usuarios de manera abierta, utilizando metodologías de pensamiento en voz alta con personas experimentadas en grafos. Se optó por esta metodología por las siguientes razones: 1) Si un usuario conoce el algoritmo y la estructura de datos pero no comprende el videojuego, entonces existen problemas de usabilidad, justificando comenzar con personas expertas. 2) Los usuarios expertos tienden a expresarse de manera más natural cuando saben que no se espera un formulario al final, lo que permite obtener opiniones más espontáneas en el momento, por lo que se prefirió no utilizar una encuesta o escala posterior a la experiencia.
 
-Si un usuario conoce el algoritmo y la estructura de datos, pero no entiende el videojuego, entonces hay problemas de usabilidad, por lo que se justifica partir con gente experta.
+Es crucial que los usuarios expresen sus impresiones a medida que los elementos del videojuego aparecen en pantalla y no después de la experiencia, para comprender mejor lo que sienten al usar la aplicación por primera vez. Hay animaciones que deben captar la atención en el momento, como la pista visual del ratón indicando al usuario que haga clic izquierdo en un planeta.
 
-Usuarios expertos pueden expresarse con más naturalidad cuando saben que no les espera un formulario al final y procuran guardar menos sus opiniones en el momento, por lo que se prefirió no dejar no utilizar una encuesta o escala post experiencia.
-
-Se considera importante que los usuarios retraten sus impresiones a medida que los elementos del videojuego aparecen en pantalla y no después a la experiencia, para saber de mejor manera qué siente la persona cuando usa la aplicación por primera vez. Hay animaciones que deben llamar la atención en el momento, como la pista visual del ratón indicándole al usuario que haga click izquierdo en un planeta.
-
-Se acabó con esta fase una vez los resultados de las pruebas de usuario mejoraron y se observó que cinco usuarios expertos pudieron terminar la prueba de inicio a fin sin estancarse. La condición es que estos usuarios no podían conocer el juego previamente. 
+Se dio por concluida esta fase una vez que los resultados de las pruebas de usuario mejoraron y se observó que cinco usuarios expertos pudieron completar la prueba de principio a fin sin inconvenientes. La condición era que estos usuarios no hubieran tenido conocimiento previo del juego.
 
 
 \subsection{Fase de evaluación académica y percepción de usuario}
 
-Se consiguió una muestra de 15 personas que participaron en esta fase de principio a fin.
+En esta fase, se logró la participación completa de una muestra de 15 personas.
 
-Para iniciar esta fase, se hizo un llamado voluntario en el foro de las secciones de Algoritmos y Estructuras de Datos de la Universidad de Chile durante el semestre de primavera del año 2023. Se ofreció remuneración a todas las personas que completaran la experiencia. La experiencia duraba 45 minutos en promedio y consistía en tres partes: Realizar la prueba de usuario, llenar un formulario basado en el modelo MEEGA+ \cite{meegaplus} y responder la prueba escrita. % Revisar si digo que el formulario está basado en la METODOLOGÍA? UTILIZA? ES DEL TIPO?
+Para iniciar esta etapa, se realizó una convocatoria voluntaria en el foro de las secciones de Algoritmos y Estructuras de Datos de la Universidad de Chile durante el semestre de primavera del año 2023. Se ofreció una remuneración a todas las personas que completaran la experiencia, que tenía una duración promedio de 45 minutos y constaba de tres partes: realizar la prueba de usuario, completar un formulario que utilizaba la escala de Likert basado en el modelo MEEGA+ \cite{meegaplus}, y responder a una prueba escrita basada en exámenes previos del curso Algoritmos y Estructuras de Datos.
 
-El modelo sistemático MEEGA+ \cite{meegaplus} está hecho para evaluar videojuegos educativo, el cual busca evaluar la percepción de la calidad de un videojuego desde la perspectiva del estudiante en el contexto de la enseñanza de la computación.  El formulario utilizado en este estudio, basado en MEEGA+ \cite{meegaplus} se encuentra en el anexo \ref{AnexoA}.
+El modelo sistemático MEEGA+ \cite{meegaplus} está diseñado para evaluar videojuegos educativos, buscando evaluar la percepción de la calidad de un videojuego desde la perspectiva del estudiante en el contexto de la enseñanza de la computación. El formulario utilizado en este estudio, basado en MEEGA+ \cite{meegaplus}, se encuentra en el \hyperref[AnexoA]{anexo A}.
 
-La medición de rendimiento académico se hace a través de una prueba escrita con dos preguntas, basadas en una pregunta de un examen del ramo de Algoritmos y Estructuras de Datos de la misma facultad. La prueba escrita se encuentra en el anexo \ref{AnexoB}.
-% PONER REFERENCIA ACÁ AL ANEXO. VER CÓMO INCLUIR LA PRUEBA EN EL PDF. TODO.
+La medición del rendimiento académico se lleva a cabo mediante una prueba escrita con dos preguntas, basadas en una pregunta de un examen del ramo de Algoritmos y Estructuras de Datos de la misma facultad. La prueba escrita se encuentra en el anexo \hyperref[AnexoB]{anexo B}.
+
 
 \subsection{Encuesta libre}
 
 % Anotar aquí antes de que termine la tesis cuánta gente fue en total.
 
-Para ampliar el estudio y aumentar el tamaño muestral, se realizó una tercera experiencia abierta a todo público que supiera programar. Se envió una invitación en distintas comunidades de videojuegos a probar el juego educativo y llenar el formulario. Como las experiencias podían variar de gran manera en este trabajo, se agregó una pregunta que pregunta por el nivel de experiencia en programación, para permitir la segmentación. El formulario utilizado también corresponde al modelo MEEGA+, pero las respuestas recolectadas se guardaron en una base de datos separada del grupo anterior. 
-
-
-\subsection{Marco teórico que justifica el modelo MEEGA+}
-
-TODO: Hablar aquí de MEEGA+, su metodología, por qué funciona lo que hicimos. Explicar un poco sobre IRT, la elección de parámetros que usan y cómo se justifica. \cite{MeegaPlusManual}.
+Con el objetivo de ampliar el estudio y aumentar el tamaño de la muestra, se llevó a cabo una tercera experiencia abierta al público en general con conocimientos en programación. Se emitió una invitación en diversas comunidades de videojuegos para probar el juego educativo y completar el formulario. Dado que las experiencias podían variar significativamente, se incorporó una pregunta sobre el nivel de experiencia en programación para permitir la segmentación. El formulario utilizado también se basó en el modelo MEEGA+, pero las respuestas recolectadas se almacenaron en una base de datos separada del grupo anterior.
 
