--- a/Tesis/trabajo_relacionado.tex
+++ b/Tesis/trabajo_relacionado.tex
@@ -17,7 +17,6 @@ En el trabajo de Zhao y Shute \cite{video_game_foster_computational_thinking}, s
 
 A pesar de esto, el impacto de estos videojuegos no ha sido evaluado en muchos casos. En las instancias documentadas, las muestras suelen ser reducidas, y las evaluaciones se centran principalmente en aspectos cualitativos \cite{video_game_foster_computational_thinking, effectiveness_gbl}.
 
-Petri y otros \cite{meegaplus} coinciden en la falta de sistematización en la evaluación de videojuegos educativos. De hecho, existen juegos serios que ni siquiera se autodenominan o se consideran como tales \cite{evaluation_of_games_for_teaching_cs}. Además, no hay un método estándar para evaluarlos, razón por la cual Petri et al. \cite{meegaplus} desarrollaron el modelo MEEGA+ (Modelo para la Evaluación de Juegos Educativos y Escala EGameFlow.
+Petri y otros \cite{meegaplus} coinciden en la falta de sistematización en la evaluación de videojuegos educativos. De hecho, existen juegos serios que ni siquiera se autodenominan o se consideran como tales \cite{evaluation_of_games_for_teaching_cs}. Además, muchos estudios eran cualitativos y carecían de resultados cuantitativos, por lo que no eran comparables.En vista de este antecedente, Petri et al. \cite{meegaplus} desarrollaron el modelo MEEGA+ (Modelo para la Evaluación de Juegos Educativos y Escala EGameFlow).
 
-Entre las deficiencias señaladas al momento de crear videojuegos, se encuentran la carencia de: 1) Definición de un objetivo de evaluación; 2) Diseño de investigación; 3) Plan de medición; 4) Instrumentos de recopilación de datos; y 5) Métodos de análisis de datos. Un ejemplo de falta de sistematización es la práctica común al analizar estas herramientas, que implica comentarios informales por parte del estudiantado \cite{meegaplus}.
-
+Entre las deficiencias señaladas al momento de crear videojuegos según Petri et al. \cite{meegaplus} se encuentran la carencia de: 1) Definición de un objetivo de evaluación; 2) Diseño de investigación; 3) Plan de medición; 4) Instrumentos de recopilación de datos; y 5) Métodos de análisis de datos. Una práctica que era común al analizar estas herramientas es hacer uso de comentarios informales por parte del estudiantado, sin la aplicación de escalas psicométricas \cite{meegaplus}.
