--- a/Tesis/anexoD.tex
+++ b/Tesis/anexoD.tex
@@ -1,19 +1,12 @@
-\chapter*{Anexo D: Aprobación de Comité de Ética}\label{AnexoD}
-% Poner aquí el PDF del comité de ética
+\chapter*{Anexo D: Consentimiento de participación voluntaria}\label{AnexoD}
 
-Revisar siguiente página. Esta aprobación se dio como respuesta a una solicitud para realizar un trabajo de título con personas, para asegurarse que se enmarcara dentro del marco ético establecido por la facultad.
+Revisar siguiente página. Este consentimiento debió firmarlo cada participante antes de empezar con la actividad. Era requerido por parte de la facultad para asegurar que cada individuo voluntario estuviera de acuerdo con formar parte del trabajo.
 
-\newgeometry{margin=0.0in} % Eliminamos bordes temporalmente
-
-% Páginas 1 y 2 en dstintas páginas
-\begin{figure}[h]
-   \centering
-   \fbox{\includegraphics[page=1, width=0.9\textwidth]{imagenes/ComiteEticaFirmado.pdf}}
-\end{figure}
+\newgeometry{margin=0.0in}
 
 \begin{figure}[h]
    \centering
-   \fbox{\includegraphics[page=2, width=0.9\textwidth]{imagenes/ComiteEticaFirmado.pdf}}
+   \fbox{\includegraphics[page=1, width=0.9\textwidth]{imagenes/ConsentimientoInformadoCosmoGraphica.pdf}}
 \end{figure}
 
 \restoregeometry
